# GRUVAX

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  compose.override.yaml.example  compose.yaml  conftest.py  docker-entrypoint.sh  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  cleanup-cache.yml  cleanup-images.yml  code-quality.yml  security.yml  test.yml
.planning/: INGEST-CONFLICTS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v2.0-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md
.planning/codebase/: CONVENTIONS.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  ingest-manifest.yaml  requirements.md
.planning/intel/classifications/: 001-v2-multi-user-collections-design.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md
.planning/notes/: segment-aware-boundaries.md
.planning/phases/01-first-search-cube-highlight/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/01-walking-skeleton-api-client-single-profile-sync/: 01-00-PLAN.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-05-PLAN.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-08-PLAN.md  01-09-SUMMARY.md  01-10-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-multi-profile-migration-profile-manager/: 02-00-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-05-PLAN.md  02-05b-SUMMARY.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-08-PLAN.md  02-08-SUMMARY.md  02-CONTEXT.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-REVIEW.md  02-UAT.md  02-UI-SPEC.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/02-real-position-estimation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UI-SPEC.md  02-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  INTERPOLATION.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/sketches/: MANIFEST.md  WRAP-UP-SUMMARY.md
deploy/kiosk/: README.md  gruvax-kiosk.service  start-kiosk.sh
design/: gruvax-design-language.md  gruvax-design-tokens.css  gruvax-design-tokens.json
docs/: ARCHITECTURE.md  runbook-fresh-host.md
fixtures/: __init__.py  boundaries.yaml  golden_cases.yaml  synth_collection.py  synth_collection.sql
frontend/: .prettierrc.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  react-qr-code.d.ts
migrations/: env.py
migrations/versions/: 0001_create_schema.py  0002_v_collection_view.py  0003_pg_trgm_indexes.py  0004_admin_tables.py  0005_segment_model.py  0006_led_settings_seed.py  0007_wizard_source_labels.py  0008_record_stats.py  0009_v2_profiles_and_collection_cache.py  0010_profile_id_not_null.py  0011_devices_and_pairing_codes.py  0011_settings_key_unique.py  0012_invite_codes_and_first_seen_at.py
mosquitto/: mosquitto.conf
scripts/: __init__.py  check_benchmark.py  run_all_algorithms.py  set_pin.py  update-project.sh
services/fake-discogsography/: Dockerfile  seed.yaml  server.py
src/gruvax/: __init__.py  _version.py  app.py  logging_config.py  settings.py
tests/: __init__.py  conftest.py  cookies.py
tests/browser/: conftest.py  test_reboot_persistence.py
tests/fixtures/: fake_discogsography.py  generate_synth_data.py  synth_profile_collection.sql  test_generator_consistency.py
tests/integration/: __init__.py  conftest.py  test_06_01_profile_scoped_writes.py  test_06_01_write_callsite_scoping.py  test_08_privacy.py  test_admin_auth.py  test_boundary_editor.py  test_change_set.py  test_compose_smoke.py  test_cube_public.py  test_cubes_bulk.py  test_devices.py  test_diagnostics.py  test_editing.py  test_export.py  test_health.py  test_import.py  test_import_roundtrip_identity.py  test_invite_codes.py  test_locate.py  test_locate_b02.py  test_migrate_0005.py  test_migrate_0009.py  test_migrate_0010.py  test_migrate_0011.py  test_profile_manager_api.py  test_run_all_algorithms.py  test_search.py  test_search_b02.py  test_search_benchmark.py  test_segment_api.py  test_session_bootstrap.py  test_settings_import.py  test_sse.py  test_sse_per_profile.py  test_two_profile_isolation.py  test_version.py  test_wizard.py
tests/property/: __init__.py  test_boundary_validation_property.py  test_boundary_yaml_roundtrip.py  test_estimator_props.py  test_export_roundtrip.py  test_fill_level_property.py  test_import_roundtrip.py  test_led_brightness.py  test_midpoint_property.py  test_nightly_scheduler.py  test_parser_props.py  test_segment_props.py
tests/unit/: test_admin_led_settings.py  test_algorithm.py  test_boundary_cache_refactor.py  test_boundary_csv.py  test_boundary_validation.py  test_boundary_yaml.py  test_cache_registry.py  test_collection_snapshot.py  test_compose_config.py  test_cube_contents.py  test_diff_preview.py  test_event_bus.py  test_fake_discogsography.py  test_fill_level.py  test_fingerprint_cookie.py  test_illuminate_endpoint.py  test_led_admin_endpoints.py  test_led_color.py  test_led_lifecycle.py  test_logging.py  test_logging_config.py  test_midpoint.py  test_mqtt_publishers.py  test_nightly_scheduler.py  test_normalize.py  test_pin.py  test_profile_state_registry.py  test_profile_status.py  test_profile_sync_diff.py  test_queries.py  test_reshuffle_draft.py  test_segment_cache.py  test_segment_estimator.py  test_session.py  test_sessions.py  test_settings_boot.py  test_settings_export.py  test_slow_query.py  test_stats.py
(+600 files in other folders)
