[project]
name = "gruvax"
version = "0.1.0"
description = "Touchscreen kiosk + REST API to locate vinyl records in a Kallax shelf collection"
readme = "README.md"
authors = [
    { name = "Robert Wlodarczyk", email = "robert@simplicityguy.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiomqtt>=2.5",
    "alembic>=1.18.4",
    "orjson>=3.11.9",
    "asgi-lifespan>=2.1.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    # Runtime dep — used by gruvax.discogsography.client (Plan 01-02) and gruvax.cli.sync_cli (Plan 01-04).
    # Was historically only in [dependency-groups] dev which broke the api container's `uv sync --no-dev`.
    "httpx>=0.28.1",
    "itsdangerous>=2.2",
    "limits>=5.8",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.49",
    "sse-starlette>=3.4",
    "stamina>=26.1.0",
    # Pull up the transitive starlette to >=1.0.1 — PYSEC-2026-161 affects 1.0.0
    # (FastAPI 0.136.1 accepts >=1.0,<2.0; 1.0.1 is in range).
    "starlette>=1.0.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
gruvax = "gruvax:main"
gruvax-set-pin = "gruvax.cli.set_pin:main"
gruvax-set-pat = "gruvax.cli.set_pat:main"
gruvax-sync = "gruvax.cli.sync_cli:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9",
    "hypothesis>=6.152.9",
    "mypy>=2.1.0",
    "natsort>=8.4",
    "pip-audit>=2.7",
    "pre-commit>=4.6",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.13",
    "types-passlib>=1.7.7",
    "types-pyyaml>=6.0.12.20260518",
]

# ── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short --benchmark-skip"
# repo root on sys.path so `from fixtures.synth_collection import ...` and
# `from scripts.run_all_algorithms import ...` resolve in pytest (Plan 02-01 §Task 2b)
pythonpath = ["."]

[tool.hypothesis]
# use deterministic mode in CI (set explicitly to avoid state leaks)
deriving_xfail = true

# ── ruff ────────────────────────────────────────────────────────────────────
# Aligned with discogsography's rule set (line-length / target stay
# GRUVAX-specific: 100 cols, Python 3.14).
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PLC",  # pylint conventions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
    "S",    # bandit security rules
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (no print statements)
    "TCH",  # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "W191", # indentation contains tabs (explicit tab detection)
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends pattern)
    "C901",   # too complex
    "E501",   # line too long, handled by ruff format
    "S101",   # use of assert detected (allow assert statements)
]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
split-on-trailing-comma = true
known-first-party = ["gruvax"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# tests: pytest fixtures inject by-name (ARG), pylint conventions (helpers/setup),
# hardcoded test passwords (S105/S106), /tmp use (S108), prints (T201).
"tests/**/*.py" = ["ARG", "PLC", "S105", "S106", "S108", "T201"]
# CLI scripts intentionally print user-facing output and may use /tmp.
"scripts/*.py" = ["T201", "S108"]
# FastAPI handlers commonly declare `request` / `cache` / `snapshot` as `Depends(...)`
# args for DI side effects without dereferencing them in the body — intended pattern.
"src/gruvax/api/**" = ["ARG001"]
# SQLAlchemy event listeners have fixed-shape callbacks; some args required by interface.
"src/gruvax/db/**" = ["ARG001"]
# Alembic env/version files follow a fixed alembic shape — print() in env, fixed signatures.
"migrations/**" = ["ARG001", "T201"]

# ── mypy ────────────────────────────────────────────────────────────────────
# Aligned with discogsography (python_version stays at GRUVAX's 3.14).
# `strict = true` already implies disallow_untyped_defs / disallow_incomplete_defs /
# check_untyped_defs / disallow_untyped_decorators / no_implicit_optional /
# warn_redundant_casts / warn_unused_ignores / warn_no_return / warn_unreachable /
# strict_equality — listed individually in discogsography's config but covered here
# by the strict toggle. Additions below are flags NOT implied by strict.
[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
mypy_path = "src"
strict = true
warn_unused_ignores = true
warn_unused_configs = true
warn_return_any = true
namespace_packages = true
explicit_package_bases = true
# Exclude test files from type checking (overrides below also relax for tests/*).
exclude = "^tests/"

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["aiomqtt.*", "sse_starlette.*", "psycopg.*", "psycopg_pool.*", "natsort.*"]
ignore_missing_imports = true

# gruvax._version is generated at build time (Dockerfile / `just build-version`) and is
# gitignored, so it is absent in CI lint runs. version.py / health.py import it under a
# try/except ImportError with a dev fallback, so a missing module is expected, not an error.
[[tool.mypy.overrides]]
module = ["gruvax._version"]
ignore_missing_imports = true

# ── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/gruvax"]
omit = ["tests/*", "migrations/*", "scripts/*"]

[tool.coverage.report]
skip_covered = false
show_missing = true
exclude_lines = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]

# ── mdformat ─────────────────────────────────────────────────────────────────
# Markdown formatter config — aligned with discogsography.
[tool.mdformat]
wrap = "no"           # Don't wrap lines (preserves intentional structure in planning docs)
number = false        # Don't number headings
end_of_line = "lf"    # Use Unix line endings

# ── bandit ───────────────────────────────────────────────────────────────────
# Single source of truth for bandit's skip list. The pre-commit hook + the
# `Python Security` CI workflow pass `-s B608` explicitly today; the values
# here additionally apply when bandit is invoked without those flags.
[tool.bandit]
exclude_dirs = [".venv", "tests", "venv", "*/.venv/*", "*/venv/*"]
skips = [
    "B101",  # assert_used (allow assert in tests + property-test invariants)
    "B108",  # hardcoded_tmp_directory (CLI scripts may legitimately use /tmp)
    "B608",  # hardcoded_sql_expressions (parameterized %s used for all user input;
             # interpolated values are internal constants — same posture as discogsography)
]

# NOTE: Version reconciliation (2026-05-20)
# aiomqtt: STACK.md/CLAUDE.md reference "3.x" but PyPI latest is 2.5.1 (no 3.x exists).
# sse-starlette: STACK.md says "2.x" but PyPI latest is 3.4.x; using 3.4+.
# Vite: STACK.md says "7.x" but npm latest is 8.x; frontend uses 8.x.
